default/objects/IrrelevantPhone__c/IrrelevantPhone__c.object-meta.xml
<CustomObject>
    <description>Global list of irrelevant phone numbers for all records in the org</description>
    <label>Irrelevant Phone</label>
    <nameField>
        <displayFormat>IP-{0000000}</displayFormat>
        <label>Irrelevant Phone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Irrelevant Phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>