default/objects/IrrelevantPhone__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Irrelevant phone number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>