default/objects/IrrelevantPhone__c/fields/Phone_NoExtension__c.field-meta.xml
<CustomField>
    <fullName>Phone_NoExtension__c</fullName>
    <description>Unique value: no phone number duplicates are allowed</description>
    <externalId>true</externalId>
    <label>Phone number - No Ext.</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>