default/objects/IrrelevantPhone__c/fields/sObjectId__c.field-meta.xml
<CustomField>
    <fullName>sObjectId__c</fullName>
    <description>Id of the sObject record from which the phone was moved to global Irrelevant phones list</description>
    <label>sObject Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>