default/objects/IrrelevantPhone__c/fields/StatusReason__c.field-meta.xml
<CustomField>
    <fullName>StatusReason__c</fullName>
    <label>StatusReason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>Doesn&#39;t exist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>